[build-system]
requires = [
    "setuptools >= 40.0.4",
    # since this isn't built into a wheel yet the below isn't needed
    # "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.pylint.'MESSAGES CONTROL']
# Disable the message, report, category or checker with the given id(s). You
# can either give multiple identifiers separated by comma (,) or put this
# option multiple times (only on the command line, not in the configuration
# file where it should appear only once). You can also use "--disable=all" to
# disable everything first and then reenable specific checks. For example, if
# you want to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable=""",
      bad-continuation,
      fixme,
      line-too-long,
      logging-fstring-interpolation,
"""
[tool.pylint.'BASIC']
# Good variable names which should always be accepted, separated by a comma.
good-names=""",
      polly-merge,
"""

[tool.tox]
# https://tox.readthedocs.io/en/latest/example/basic.html#pyproject-toml-tox-legacy-ini
legacy_tox_ini = """
# tox (https://tox.readthedocs.io/) is a tool for running tests
# in multiple virtualenvs. This configuration file will run the
# test suite on all supported python versions. To use it, "pip install tox"
# and then run "tox" from this directory.
#

[build-system]
requires = [ "setuptools == 40.6.3", "wheel == 0.32.3"]

[tox]
isolated_build = True
requires = tox-conda
envlist =
    {py36,py37,py38}-stable
    black
    isort

[testenv]
conda_channels=
    conda-forge
deps =
    py36,py37,py38: pylint==2.5.0
whitelist_externals =
    /bin/bash
    /bin/echo
setenv =
    TOX_INI_DIR = {toxinidir}
commands =
    pylint polly-merge.py

# black formatting required
[testenv:black]
deps=
    black==19.10b0
basepython=python3
commands=
    black --check --verbose .

# verify imports are sorted properly
[testenv:isort]
deps=
    isort[pyproject]==4.3.9
basepython=python3
commands=
    bash -c "cd {toxinidir} && isort -c"
"""
